# pubcookie

./: .gitignore  Makefile.in  Makefile.in.ap1  Makefile.in.ap2  README.autoupgrade  README.install  README.rst  apache.h  configure  configure.ac  modules.mk  stamp-h.in  uw_server_config.sh
cgic/: CHANGES  Makefile.in  cgic.c  cgic.h  cgictest.c
distrib/: pbc-login-server-security-fix-3_3_0-3_3_0a.patch
doc/: CHANGES  CHANGES.login.txt  CHANGES.mod_pubcookie.txt  CHANGES.txt  CONFIG.txt  CREDITS.txt  HACKING.txt  INSTALL.login.txt  LICENSE.txt  NEW_SITE.txt  README.txt  config.html  config.login.sample  config.sample  install-filter.html  install-login.html  install-mod_pubcookie-1.77.html  install-mod_pubcookie-3.0.html  install-mod_pubcookie.html  krb5-getcred.html  mod_pubcookie-directives.html  mod_pubcookie_dev_notes.txt  pubcookie.css  pubcookie.file_header  pubcookie_style_guide.txt  templates.html
doc-legacy/: install-mod_pubcookie-3.0.html  mod_pubcookie-directives.html
duo/: Makefile.in  README.UW  duo_iframe.c
duo_iframe/: duo_iframe.h
mail/: temp.md
relay/: Makefile.am  Makefile.in  README  boot  index.cgi.c
src/: Makefile  Makefile.admin  Makefile.apxs  Makefile.apxs.in  Makefile.in  Makefile.index.cgi  Makefile.libpubcookie  Makefile.login  Makefile.login.in  Makefile.settings  Makefile.settings.in  Makefile.tmpl  TODO  base64.c  candv.c  capture_cmd_output.c  check_crypted_blob.c  config.h.in  configure  configure.ac  cookie_blanking_patch.apache1.3.6  crypted_bit_server.c  dtest.c  flavor.c  flavor.h  flavor_basic.c  flavor_getcred.c  flavor_uwsecurid.c  html.h  index.cgi  index.cgi.c  index.cgi.h  index.cgi_etcpasswd.c  index.cgi_krb.c  index.cgi_metaauth.c  index.cgi_securid.c  key1.c  keyclient.c  keyserver.c  legal.txt  (+71 more)
src/Win32/: LICENSE.rtf  PubCookieFilter.cpp  PubCookieFilter.def  PubCookieFilter.dsp  PubCookieFilter.dsw  PubCookieFilter.h  PubCookieFilter.h.in  PubCookieFilter.opt  PubCookieFilter.rc  PubCookieFilter.rc.in  PubCookieFilter.sln  PubCookieFilter.vcproj  PubCookieFilter.vcxproj  WebClient.c  WebClient.h  debug.c  debug.h  keyclient.dsp  keyclient.dsw  keyclient.opt  keyclient.sln  keyclient.vcproj  keyclient.vcxproj  pbc_messages.vcproj  pbc_messages.vcxproj  pbc_w32_myconfig.c  resource.h  winkeyclient.c  winkeyclient.h
src/Win32/WebApp/: Default.asp
src/Win32/WebApp/app-and-clearlogin-logout/: Default.asp
src/Win32/WebApp/app-only-logout/: Default.asp
src/Win32/include/openssl/: bio.h  bn.h  conf.h  des.h  dh.h  e_os.h  e_os2.h  engine.h  err.h  evp.h  obj_mac.h  opensslv.h  pkcs12.h  rsa.h  ssl.h  ssl3.h
src/Win32/installer/: Pubcookie.msi  Setup.rul  addappmap.vbs  addfiltertometabasemain.vbs  exampleinstall.bat  pubcookie.ism  setiisscript.vbs
src/Win32/lib/: libeay32.lib  ssleay32.lib
src/Win32/lib-Win32/: libeay32.lib  ssleay32.lib
src/Win32/pbcgui/: CPBC_PropSheet.cpp  CPBC_PropSheet.h  gui_myconfig.cpp  pbcgui-directive.vcproj  pbcgui-server.vcproj  pbcgui.sln
src/Win32/pbcgui/Directive/: directive.Cpp  pbc_directives.h  resource.Rc  resource.h
src/Win32/pbcgui/Server/: GUIDs.h  pbc_directives.h  resource.Rc  server.cpp
src/Win32/relay/: hello.tpl  index.cgi.c  relay.sln  relay.vcproj  toapp.tpl
src/contrib/cmu_kerberos/: k4auth.c  k4auth.h  k4auth_test  k4auth_test.c  k4auth_test.c~  k5auth.c  k5auth.h  k5auth_test.c
src/contrib/index.cgi_ldap/: diff.index.cgi.c  diff.index.cgi.h  diff.mod_pubcookie.c  index.cgi.c  index.cgi.h  mod_pubcookie.c  pbc_config.h
src/css/: .htaccess  README  opensans.css  weblogin-enhanced.css  weblogin-global.css
src/login_templates.cmu/: README  login  login_part1  logout_still_weblogin  nonpost_redirect  notok_part2  status  welcome_back
src/login_templates.generic/: README  copyright  error  form_expired  login  login_auth_prob_uwsecurid  login_bad_auth  login_bad_auth_static_user  login_cache_creds_wrong  login_expired  login_next_prn  login_part1  login_part2  login_pass_form_field  login_pass_static  login_pinit  login_reauth  login_top  login_unauth_grant  login_user_form_field  login_user_hidden  login_user_static  login_uwsecurid  logo  logout_already_weblogin  logout_app  logout_app_custom  logout_app_custom_prefix  logout_app_custom_suffix  logout_part1  logout_part2  logout_postscript_still_others  logout_postscript_still_weblogin  logout_still_known  logout_still_weblogin  logout_time_remaining  logout_weblogin  nonpost_redirect  notok  notok_badagent  (+10 more)
src/login_templates.uw/: README  ReadMe.hubert  copyright  error  form_expired  login  login_auth_prob_uwsecurid  login_bad_auth  login_bad_auth_static_user  login_bad_auth_uwsecurid  login_bad_auth_uwsecurid_static_user  login_cache_creds_wrong  login_duo  login_expired  login_next_prn  login_nolcookie  login_nolcookie_uwsecurid  login_part1  login_part2  login_pass_form_field  login_pass_static  login_pinit  login_reauth  login_unauth_grant  login_user_form_field  login_user_hidden  login_user_static  login_uwsecurid  logo  logout_already_weblogin  logout_app  logout_app_custom  logout_part1  logout_part2  logout_postscript_still_others  logout_postscript_still_weblogin  logout_still_known  logout_still_weblogin  logout_time_remaining  logout_weblogin  (+12 more)
src/misc_patches/: a5rebook1_patch1_fmf  a5rebook1_patch2_fmf  a5rebook2_patch1_fmf  a5release2_patch1_fmf  a5release2_patch1_fmf2  fmf_patch_19990212  fox_cookie-no-blank_20010829.diff  junk  util_script.c
src/uwash/: Makefile.apxs.uw  Makefile.index.cgi.uw
src/uwsecurid/: Makefile  messages.h  sidapi.c  sidapi.h
tokchk/: README  simplemake  tokchk.c
windows_test_apps/: Test_local_blob.bat  Test_login_blob.bat
